Fix documentation inconsistency

--- a/README
+++ b/README
@@ -5,5 +5,5 @@ Searchproviders are:
 
   skroutz:
       Search for prices using skroutz.gr
-      e.g., shop:nexus => http://www.skroutz.gr/search?keyphrase=nexus
+      e.g., skroutz:nexus => http://www.skroutz.gr/search?keyphrase=nexus
 
